--- a/notebooks/Makefile
+++ b/notebooks/Makefile
@@ -1,10 +1,11 @@
 all: test
 
 install:
-	pip install -r requirements.txt
+	pip install --upgrade pip pipenv
+	pipenv install --keep-outdated
 
 test: clean
-	python test_notebooks.py .
+	pipenv run python test_notebooks.py .
 
 clean:
 	rm -f executed_*
