Fix notebooks test in ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
 
       - run:
           name: Test notebooks
-          command:
+          command: |
             source venv/bin/activate
             make test
 
