Execute CI edge job on master only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,7 @@ workflows:
   test:
     jobs:
       - stable
-      - edge
+      - edge:
+          filters:
+            branches:
+              only: master
