[TO REVERT] Execute CI edge job on stable-edge-37 branch only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,4 +47,4 @@ workflows:
       - edge:
           filters:
             branches:
-              only: master
+              only: stable-edge-37
