Use pip rather than pipenv

--- a/notebooks/Makefile
+++ b/notebooks/Makefile
@@ -1,14 +1,10 @@
 all: test
 
-install:
-	pip install --upgrade pip pipenv
-	pipenv install --dev --keep-outdated
-
 run:
-	pipenv run jupyter notebook
+	jupyter notebook
 
 test: clean
-	pipenv run python test_notebooks.py .
+	python test_notebooks.py .
 
 clean:
 	rm -f executed_*
