Document Makefile targets

--- a/notebooks/Makefile
+++ b/notebooks/Makefile
@@ -1,9 +1,11 @@
 all: test
 
 run:
+	@# To run Jupyter locally (without Binder)
 	jupyter notebook
 
 test: clean
+	@# To test that notebooks are compatible with the installed libraries.
 	python test_notebooks.py .
 
 clean:
