--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,59 +1,24 @@
 version: 2
 jobs:
-  # First, we install the required libraries for the test to run.
-  install_dependencies:
-    working_directory: ~/tutorial
+  build:
     docker:
       - image: python:3.7
 
     steps:
-      - checkout:
-          path: ~/tutorial
-
-      # We create a virtualenv to isolate as much as possible our test environment.
-      - run:
-          name: Create a virtualenv
-          command: python -m venv /tmp/venv/tutorial
+      - checkout
 
       - run:
           name: Install dependencies
-          command: |
-            source /tmp/venv/tutorial/bin/activate
-            make install
-
-      # We save our virtualenv to reuse it later.
-      - persist_to_workspace:
-          root: /tmp/venv/tutorial
-          paths:
-            - "*"
-
-  # Then, we test our notebooks are still compatible with th installed libraries.
-  # Note that our working directory is different now.
-  test_notebooks:
-    working_directory: ~/tutorial/notebooks
-    docker:
-      - image: python:3.7
-
-    steps:
-      - checkout:
-          path: ~/tutorial
-
-      # We load our previously created virtualenv.
-      # So we can run our tests even if in another working directory.
-      - attach_workspace:
-          at: /tmp/venv/tutorial
+          command: make install
 
       - run:
           name: Test notebooks
           command: |
-            source /tmp/venv/tutorial/bin/activate
+            cd notebooks
             make test
 
 workflows:
   version: 2
   build:
     jobs:
-      - install_dependencies
-      - test_notebooks:
-          requires:
-            - install_dependencies
+      - build
